--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
+      - name: Cambiar de rama
+        run: git switch calvarez
+      
       - name: Instalar dependencias
         run: npm install
 
