--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,13 +26,5 @@ jobs:
 
       # Runs a single command using the runners shell
       
-      - name: Instalar dependencias
-        run: npm install
-
-      - name: Start
-        run: npm run start
-
-      - name: Test
-        run: npm test
-
-
+      - name: Cambiar de rama
+        run: git switch calvarez
