--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ "calvarez" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "calvarez" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
