--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,42 +1,47 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI_Renzo
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "calvarez", "ccarrasco" ]
+    branches: [ "main", "ccarrasco" ]
   pull_request:
-    branches: [ "calvarez" ]
+    branches: [ "main", "ccarrasco" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Cambiar de rama
-        run: git switch calvarez
-      
-      - name: Instalar dependencias
-        run: npm install
+      - name: Set Up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
 
-      - name: Start
-        run: npm run start
+      - name: Install Dependencies
+        run: |
+          npm install
+          npm install -g yarn
+          yarn install
 
-      - name: Test
-        run: npm test
+      - name: Build React Native App
+        run: |
+          # Asumiendo que usas Expo, si no, ajusta esto
+          expo build:android
+          expo build:ios
 
-      - name: Expo
-        run: eas update
+      - name: Run Tests
+        run: |
+         npm test
+
+      - name: Deploy to Test Environment
+        run: |
