--- a/TrabajoFinal/package.json
+++ b/TrabajoFinal/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
